# deep-search

./: Cargo.toml  README.md
src/: lib.rs  main.rs  tree.rs
src/text/: readme.txt  test.txt
tests/text/: readme.txt  rust.txt  test.txt  text.vue  卡片笔记写作法.txt
tests/text/sub/: text.ts
