cargo-features = ["edition2021"]
[package]
name = "deepsearch"
version = "0.0.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
clap = "~3.1.17"
termcolor = "1.1.0"
content_inspector = "0.2.4"